Fixed the default center align in slate

--- a/src/partials/elements/_slate.sass
+++ b/src/partials/elements/_slate.sass
@@ -34,6 +34,9 @@
     font-weight: 500
     display    : block
 
+.ts.slate:not(.heading) .header:not(.ts):not(.sub):not(.item)
+    text-align: center
+
 //-------------------//
 // Bolder & Thinner Header
 //-------------------//
@@ -52,6 +55,9 @@
     margin-top: $slate_descriptionMargin
     opacity   : $slate_descriptionOpacity
     display   : block
+
+.ts.slate:not(.heading) .description
+    text-align: center
 
 //-------------------//
 //       Action
